--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <!-- <a class="brand" href="#about">MS</a> -->
         <nav class="nav">
           <a href="#about">About</a>
+          <a href="#experience">Experience</a>
           <a href="#projects">Projects</a>
           <a href="#videos">Videos</a>
           <a href="#articles">Articles</a>
